--- a/src/Vistas/IngresarFuncion.form
+++ b/src/Vistas/IngresarFuncion.form
@@ -74,7 +74,7 @@
                               </Group>
                           </Group>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="txtFuncion" max="32767" attributes="0"/>
+                              <Component id="txtFuncion" min="-2" pref="238" max="-2" attributes="0"/>
                               <Component id="jPanel2" max="32767" attributes="0"/>
                           </Group>
                       </Group>
